copyparty/web/md.css
@font-face {
	font-family: 'scp';
	src: local('Source Code Pro Regular'), local('SourceCodePro-Regular'), url(/.cpr/deps/scp.woff2) format('woff2');
}
html, body {
	color: #333;
	background: #eee;
	font-family: sans-serif;
	line-height: 1.5em;
}
#tt, #toast {
	position: fixed;
	max-width: 34em;
	background: #222;
	border: 0 solid #777;
	box-shadow: 0 .2em .5em #222;
	border-radius: .4em;
	z-index: 9001;
}
#tt {
	overflow: hidden;
	margin-top: 1em;
	padding: 0 1.3em;
	height: 0;
	opacity: .1;
	transition: opacity 0.14s, height 0.14s, padding 0.14s;
}
#toast {
	top: 1.4em;
	right: -1em;
	line-height: 1.5em;
	padding: 1em 1.3em;
	border-width: .4em 0;
	transform: translateX(100%);
	transition: all .4s cubic-bezier(.2, 1.2, .5, 1);
	text-shadow: 1px 1px 0 #000;
	color: #fff;
}
#toastc {
	display: inline-block;
	position: absolute;
	overflow: hidden;
	left: 0;
	width: 0;
	opacity: 0;
	padding: .3em 0;
	margin: -.3em 0 0 0;
	line-height: 1.5em;
	color: #000;
	border: none;
	outline: none;
	text-shadow: none;
	border-radius: .5em 0 0 .5em;
	transition: all .4s cubic-bezier(.2, 1, .5, 1);
}
#toast.vis {
	right: 1.3em;
	transform: unset;
}
#toast.vis #toastc {
	left: -2em;
	width: .4em;
	padding: .3em .8em;
	opacity: 1;
}
#toast.inf {
	background: #07a;
	border-color: #0be;
}
#toast.inf #toastc {
	background: #0be;
}
#toast.ok {
	background: #4a0;
	border-color: #8e4;
}
#toast.ok #toastc {
	background: #8e4;
}
#toast.warn {
	background: #970;
	border-color: #fc0;
}
#toast.warn #toastc {
	background: #fc0;
}
#toast.err {
	background: #900;
	border-color: #d06;
}
#toast.err #toastc {
	background: #d06;
};
}
#tt.b {
	padding: 0 2em;
	border-radius: .5em;
	box-shadow: 0 .2em 1em #000;
}
#tt.show {
	padding: 1em 1.3em;
	border-width: .4em 0;
	height: auto;
	opacity: 1;
}
#tt.show.b {
	padding: 1.5em 2em;
	border-width: .5em 0;
}
#tt code {
	background: #3c3c3c;
	padding: .1em .3em;
	border-top: 1px solid #777;
	border-radius: .3em;
	font-family: monospace, monospace;
	line-height: 1.7em;
}
#tt em {
	color: #f6a;
}
html.light #tt {
	background: #fff;
	border-color: #888 #000 #777 #000;
}
html.light #tt,
html.light #toast {
	box-shadow: 0 .3em 1em rgba(0,0,0,0.4);
}
html.light #tt code {
	background: #060;
	color: #fff;
}
html.light #tt em {
	color: #d38;
}



#mtw {
	display: none;
}
#mw {
	margin: 0 auto;
	padding: 0 1.5em;
}
pre, code, a {
	color: #480;
	background: #f7f7f7;
	border: .07em solid #ddd;
	border-radius: .2em;
	padding: .1em .3em;
	margin: 0 .1em;
}
code {
	font-size: .96em;
}
pre, code {
	font-family: 'scp', monospace, monospace;
	white-space: pre-wrap;
	word-break: break-all;
}
pre {
	counter-reset: precode;
}
pre code {
	counter-increment: precode;
	display: inline-block;
	margin: 0 -.3em;
	padding: .4em .5em;
	border: none;
	border-bottom: 1px solid #cdc;
	min-width: calc(100% - .6em);
	line-height: 1.1em;
}
pre code:last-child {
	border-bottom: none;
}
pre code::before {
	content: counter(precode);
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	display: inline-block;
	text-align: right;
	font-size: .75em;
	color: #48a;
	width: 4em;
	padding-right: 1.5em;
	margin-left: -5.5em;
}
pre code:hover {
	background: #fec;
	color: #360;
}
h1, h2 {
	line-height: 1.5em;
}
h1 {
	font-size: 1.7em;
	text-align: center;
	border: 1em solid #777;
	border-width: .05em 0;
	margin: 3em 0;
}
h2 {
	font-size: 1.5em;
	font-weight: normal;
	background: #f7f7f7;
	border-top: .07em solid #fff;
	border-bottom: .07em solid #bbb;
	border-radius: .5em .5em 0 0;
	padding-left: .4em;
	margin-top: 3em;
}
h3 {
	border-bottom: .1em solid #999;
}
h1 a, h3 a, h5 a,
h2 a, h4 a, h6 a {
	color: inherit;
	display: block;
	background: none;
	border: none;
	padding: 0;
	margin: 0;
}
#mp ul,
#mp ol {
	border-left: .3em solid #ddd;
}
#m>ul,
#m>ol {
	border-color: #bbb;
}
#mp ul>li {
	list-style-type: disc;
}
#mp ul>li,
#mp ol>li {
	margin: .7em 0;
}
strong {
	color: #000;
}
p>em,
li>em,
td>em {
	color: #c50;
	padding: .1em;
	border-bottom: .1em solid #bbb;
}
blockquote {
	font-family: serif;
	background: #f7f7f7;
	border: .07em dashed #ccc;
	padding: 0 2em;
	margin: 1em 0;
}
small {
	opacity: .8;
}
#toc {
	margin: 0 1em;
	-ms-scroll-chaining: none;
	overscroll-behavior-y: none;
}
#toc ul {
	padding-left: 1em;
}
#toc>ul {
	text-align: left;
	padding-left: .5em;
}
#toc li {
	list-style-type: none;
	line-height: 1.2em;
	margin: .5em 0;
}
#toc a {
	color: #057;
	border: none;
	background: none;
	display: block;
	margin-left: -.3em;
	padding: .2em .3em;
}
#toc a.act {
	color: #fff;
	background: #07a;
}
.todo_pend,
.todo_done {
	z-index: 99;
	position: relative;
	display: inline-block;
	font-family: monospace, monospace;
	font-weight: bold;
	font-size: 1.3em;
	line-height: .1em;
	margin: -.5em 0 -.5em -.85em;
	top: .1em;
	color: #b29;
}
.todo_done {
	color: #6b3;
	text-shadow: .02em 0 0 #6b3;
}
table {
	border-collapse: collapse;
	margin: 1em 0;
}
th, td {
	padding: .2em .5em;
	border: .12em solid #aaa;
}
blink {
	animation: blinker .7s cubic-bezier(.9, 0, .1, 1) infinite;
}
@keyframes blinker {
	10% {
		opacity: 0;
	}
	60% {
		opacity: 1;
	}
}

@media screen {
	html, body {
		margin: 0;
		padding: 0;
		outline: 0;
		border: none;
		width: 100%;
		height: 100%;
	}
	#mw {
		margin: 0 auto;
		right: 0;
	}
	#mp {
		max-width: 52em;
		margin-bottom: 6em;
		word-break: break-word;
		overflow-wrap: break-word;
		word-wrap: break-word; /*ie*/
	}
	a {
		color: #fff;
		background: #39b;
		text-decoration: none;
		padding: 0 .3em;
		border: none;
		border-bottom: .07em solid #079;
	}
	h2 {
		color: #fff;
		background: #555;
		margin-top: 2em;
		border-bottom: .22em solid #999;
		border-top: none;
	}
	h1 {
		color: #fff;
		background: #444;
		font-weight: normal;
		border-top: .4em solid #fb0;
		border-bottom: .4em solid #777;
		border-radius: 0 1em 0 1em;
		margin: 3em 0 1em 0;
		padding: .5em 0;
	}
	#mn {
		padding: 1.3em 0 .7em 1em;
		border-bottom: 1px solid #ccc;
		background: #eee;
		z-index: 10;
		width: calc(100% - 1em);
	}
	#mn a {
		color: #444;
		background: none;
		margin: 0 0 0 -.2em;
		padding: .3em 0 .3em .4em;
		text-decoration: none;
		border: none;
		/* ie: */
		border-bottom: .1em solid #777\9;
		margin-right: 1em\9;
	}
	#mn a:first-child {
		padding-left: .5em;
	}
	#mn a:last-child {
		padding-right: .5em;
	}
	#mn a:not(:last-child)::after {
		content: '';
		width: 1.05em;
		height: 1.05em;
		margin: -.2em .3em -.2em -.4em;
		display: inline-block;
		border: 1px solid rgba(0,0,0,0.2);
		border-width: .2em .2em 0 0;
		transform: rotate(45deg);
	}
	#mn a:hover {
		color: #000;
		text-decoration: underline;
	}
	#mh {
		padding: .4em 1em;
		position: relative;
		width: 100%;
		width: calc(100% - 3em);
		background: #eee;
		z-index: 9;
		top: 0;
	}
	#mh a {
		color: #444;
		background: none;
		text-decoration: underline;
		border: none;
	}
	#mh a:hover {
		color: #000;
		background: #ddd;
	}
	#toolsbox {
		overflow: hidden;
		display: inline-block;
		background: #eee;
		height: 1.5em;
		padding: 0 .2em;
		margin: 0 .2em;
		position: absolute;
	}
	#toolsbox.open {
		height: auto;
		overflow: visible;
		background: #eee;
		box-shadow: 0 .2em .2em #ccc;
		padding-bottom: .2em;
	}
	#toolsbox a {
		display: block;
	}
	#toolsbox a+a {
		text-decoration: none;
	}



	html.dark,
	html.dark body {
		background: #222;
		color: #ccc;
	}
	html.dark #toc a {
		color: #ccc;
		border-left: .4em solid #444;
		border-bottom: .1em solid #333;
	}
	html.dark #toc a.act {
		color: #fff;
		border-left: .4em solid #3ad;
	}
	html.dark #toc li {
		border-width: 0;
	}
	html.dark #mp a {
		background: #057;
	}
	html.dark #mp h1 a, html.dark #mp h4 a,
	html.dark #mp h2 a, html.dark #mp h5 a,
	html.dark #mp h3 a, html.dark #mp h6 a {
		color: inherit;
		background: none;
	}
	html.dark pre,
	html.dark code {
		color: #8c0;
		background: #1a1a1a;
		border: .07em solid #333;
	}
	html.dark #mp ul,
	html.dark #mp ol {
		border-color: #444;
	}
	html.dark #m>ul,
	html.dark #m>ol {
		border-color: #555;
	}
	html.dark strong {
		color: #fff;
	}
	html.dark p>em,
	html.dark li>em,
	html.dark td>em {
		color: #f94;
		border-color: #666;
	}
	html.dark h1 {
		background: #383838;
		border-top: .4em solid #b80;
		border-bottom: .4em solid #4c4c4c;
	}
	html.dark h2 {
		background: #444;
		border-bottom: .22em solid #555;
	}
	html.dark td,
	html.dark th {
		border-color: #444;
	}
	html.dark blockquote {
		background: #282828;
		border: .07em dashed #444;
	}
	html.dark #mn a:not(:last-child)::after {
		border-color: rgba(255,255,255,0.3);
	}
	html.dark #mn a {
		color: #ccc;
	}
	html.dark #mn {
		border-bottom: 1px solid #333;
	}
	html.dark #mn,
	html.dark #mh {
		background: #222;
	}
	html.dark #mh a {
		color: #ccc;
		background: none;
	}
	html.dark #mh a:hover {
		background: #333;
		color: #fff;
	}
	html.dark #toolsbox {
		background: #222;
	}
	html.dark #toolsbox.open {
		box-shadow: 0 .2em .2em #069;
		border-radius: 0 0 .4em .4em;
	}
}

@media screen and (min-width: 66em) {
	#mw {
		position: fixed;
		overflow-y: auto;
		left: 14em;
		left: calc(100% - 55em);
		max-width: none;
		bottom: 0;
		scrollbar-color: #eb0 #f7f7f7;
	}
	#toc {
		width: 13em;
		width: calc(100% - 55.3em);
		max-width: 30em;
		background: #eee;
		position: fixed;
		overflow-y: auto;
		top: 0;
		left: 0;
		bottom: 0;
		padding: 0;
		margin: 0;
		scrollbar-color: #eb0 #f7f7f7;
		box-shadow: 0 0 1em rgba(0,0,0,0.1);
		border-top: 1px solid #d7d7d7;
	}
	#toc li {
		border-left: .3em solid #ccc;
	}
	#toc::-webkit-scrollbar-track {
		background: #f7f7f7;
	}
	#toc::-webkit-scrollbar {
		background: #f7f7f7;
		width: .8em;
	}
	#toc::-webkit-scrollbar-thumb {
		background: #eb0;
	}


	
	html.dark #toc {
		background: #282828;
		border-top: 1px solid #2c2c2c;
		box-shadow: 0 0 1em #181818;
	}
	html.dark #toc,
	html.dark #mw {
		scrollbar-color: #b80 #282828;
	}
	html.dark #toc::-webkit-scrollbar-track {
		background: #282828;
	}
	html.dark #toc::-webkit-scrollbar {
		background: #282828;
		width: .8em;
	}
	html.dark #toc::-webkit-scrollbar-thumb {
		background: #b80;
	}
}
@media screen and (min-width: 85.5em) {
	#toc { width: 30em }
	#mw { left: 30.5em }
}
@media print {
	@page {
		size: A4;
		padding: 0;
		margin: .5in .6in;
		mso-header-margin: .6in;
		mso-footer-margin: .6in;
		mso-paper-source: 0;
	}
	a {
		color: #079;
		text-decoration: none;
		border-bottom: .07em solid #4ac;
		padding: 0 .3em;
	}
	#toc>ul {
		border-left: .1em solid #84c4dd;
	}
	#mn, #mh {
		display: none;
	}
	html, body, #toc, #mw {
		margin: 0 !important;
		word-break: break-word;
		width: 52em;
	}
	#toc {
		margin-left: 1em !important;
	}
	#toc a {
		color: #000 !important;
	}
	#toc a::after {
		/* hopefully supported by browsers eventually */
		content: leader('.') target-counter(attr(href), page);
	}
	a[ctr]::before {
		content: attr(ctr) '. ';
	}
	h1 {
		margin: 2em 0;
	}
	h2 {
		margin: 2em 0 0 0;
	}
	h1, h2, h3 {
		page-break-inside: avoid;
	}
	h1::after,
	h2::after,
	h3::after {
		content: 'orz';
		color: transparent;
		display: block;
		line-height: 1em;
		padding: 4em 0 0 0;
		margin: 0 0 -5em 0;
	}
	p {
		page-break-inside: avoid;
	}
	table {
		page-break-inside: auto;
	}
	tr {
		page-break-inside: avoid;
		page-break-after: auto;
	}
	thead {
		display: table-header-group;
	}
	tfoot {
		display: table-footer-group;
	}
	#mp a.vis::after {
		content: ' (' attr(href) ')';
		border-bottom: 1px solid #bbb;
		color: #444;
	}
	blockquote {
		border-color: #555;
	}
	code {
		border-color: #bbb;
	}
	pre, pre code {
		border-color: #999;
	}
	pre code::before {
		color: #058;
	}


	
	html.dark a {
		color: #000;
	}
	html.dark pre,
	html.dark code {
		color: #240;
	}
	html.dark p>em,
	html.dark li>em,
	html.dark td>em {
		color: #940;
	}
}

